@@ -1,3 +1,7 @@
+2007-04-20  Jean-Louis Martineau <martineau@zmanda.com>
+	* amplot/amplot.awk: Fix some parsing
+	* server-src/driver.c (free_kps): Return 0 instead of big value.
+
 2007-04-18  Jean-Louis Martineau <martineau@zmanda.com>
 	* client-src/sendbackup.c: Improve tar argument in amanda header for
 				   extraction.
